# rombeng

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: Test.yml
kernel/: CMakeLists.txt  matmul.metal
src/: dot.rs  gpu.rs  main.rs  matmul.rs
