[package]
name = "rombeng"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
cc = "1.0.46"

[dependencies]
libc = "0.2.139"
metal = { git = "https://github.com/gfx-rs/metal-rs" }
num-traits = "0.2.15"
once_cell = "1.17.1"